# cpp-mental-models

./: .gitignore  CMakeLists.txt  README.en.md  README.md  README_CN.md  README_EN.md
C++/C_MemorySegmentation/: CMakeLists.txt
C++/Cpp_Callable/: CMakeLists.txt  main0.cpp  main2.cpp  main4.cpp  main6.cpp  main8.cpp
modules/: CMakeLists.txt
modules/arithmetic-traps/: CMakeLists.txt  cwe190_exploits.cpp  implicit_rules.cpp
modules/build-type/: CMakeLists.txt  matrix_bench.cpp  matrix_build_profiles.cpp
modules/callable-objects/: main1.cpp  main3.cpp  main5.cpp  main7.cpp  main9.cpp
modules/clockwise-spiral/: CMakeLists.txt  main1.cpp
modules/dynamic-static-libs/: CMakeLists.txt  DynamicStaticLib.md  main.cpp
modules/dynamic-static-libs/DynamicDemo_1/: main.cpp  my_add.h  my_multiply.h
modules/dynamic-static-libs/StaticDemo_1/: main.cpp  my_add.cpp  my_multiply.cpp
modules/dynamic-static-libs/StaticDemo_2/: libA.cpp  libA.h  libB.cpp  libB.h  main.cpp
modules/memory-segmentation/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp
modules/move-semantics/: CMakeLists.txt  main1.cpp  main10.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
modules/namespaces/: CMakeLists.txt  Cpp_namespace.md  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
modules/namespaces/app_v1/: main.cpp
modules/namespaces/app_v2/: main.cpp
modules/namespaces/lib_v1/: my_math.cpp  (+1 more)
modules/oop/: CMakeLists.txt
modules/smart-pointers/: Cpp_SmartPtrs.md  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
modules/type-aliases/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp
(+17 files in other folders)
