# ./modules/CMakeLists.txt

add_subdirectory(clockwise-spiral)
add_subdirectory(memory-segmentation)
add_subdirectory(type-aliases)
add_subdirectory(callable-objects)
add_subdirectory(smart-pointers)
add_subdirectory(namespaces)
add_subdirectory(dynamic-static-libs)
add_subdirectory(move-semantics)
add_subdirectory(oop)